# long-runner-agentic-builder

./: .env.production.example  .gitignore  README.md  blueprint.md  docker-compose.yml  feature_list.json  implementation_plan.md  init.sh  progress_log.json  pyproject.toml
.claude/: settings.local.json
backend/: CLI_README.md  cli_main.py  pyproject.toml  pytest.ini
backend/config/prompts/: coding.txt  gitops.txt  initializer.txt  qa_doc.txt  testing.txt
backend/src/: main.py
backend/src/agents/: coding.py  gitops.py  initializer.py  qa_doc.py  testing.py
backend/src/checkpointing/: factory.py
backend/src/cli/: __init__.py  app.py  styles.tcss
backend/src/cli/components/: __init__.py  feature_table.py  log_viewer.py  status_header.py  token_chart.py
backend/src/cli/runner/: __init__.py  workflow_runner.py
backend/src/cli/screens/: __init__.py  main_screen.py  setup_screen.py
backend/src/mcp_config/: client.py
backend/src/state/: schemas.py
backend/src/tools/: feature_tools.py  filesystem_tools.py  git_tools.py  github_tools.py  memory_tools.py  message_trimmer.py  recovery_tools.py  test_tools.py
backend/src/utils/: logging.py  model.py  paths.py  token_counter.py
backend/src/workflow/: orchestrator.py  routers.py
config/prompts/: coding.txt  gitops.txt  initializer.txt  qa_doc.txt  testing.txt
scripts/: clear_checkpoint.py  inspect_checkpoints.py  setup_dev.sh
src/: main.py
src/agents/: coding.py  gitops.py  initializer.py  qa_doc.py  testing.py
src/mcp/: client.py
src/mcp_config/: client.py
src/state/: schemas.py
src/tools/: code_quality.py  feature_tools.py  filesystem_tools.py  git_tools.py  github_tools.py  memory_tools.py  test_tools.py
src/utils/: model.py
src/workflow/: orchestrator.py  routers.py
tests/integration/: test_multi_feature_workflow.py
tests/unit/: test_routers.py
